--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,8 @@ footer{
 	background-position: 0 0;
 	margin: 0 auto;
 	height: 257px;
+	position: fixed;
+	bottom: -60px;
 }
 
 .footer-menu{
@@ -195,27 +197,6 @@ footer{
 
 .footer-card span{
 	font-size: 1.3rem;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-html,
-
-body {
-  height: 100%;
-}
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-.content {
-  flex: 1 0 auto;
-}
-.footer {
-  flex: 0 0 auto;
 }
 
 .found{
@@ -245,5 +226,10 @@ body {
 	border: none;
 	outline: none;
 	padding-left: 130px; 
+	text-align: center;
+}
+
+.card-title{
+	font-size: 1.5rem;
 	text-align: center;
 }
