--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ footer{
 	margin: 0 auto;
 	height: 257px;
 	position: fixed;
-	bottom: -60px;
+	bottom: 0px;
 }
 
 .footer-menu{
@@ -200,7 +200,13 @@ footer{
 }
 
 .found{
-	
+	background-image: url('../img/mini-board.png');
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: 0 0;
+	width: 100%;
+	height: 360px;
+	margin: 0 auto;
 }
 
 .price_information h2{
@@ -232,4 +238,38 @@ footer{
 .card-title{
 	font-size: 1.5rem;
 	text-align: center;
+}
+
+.new_card{
+	background-image: url("../img/news-board.png");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: 0 0;
+	width: 99%;
+	margin: 0 auto;
+}
+
+.new_title{
+	text-align: center;
+	padding-top: 32%;
+	color: white;
+}
+
+.new_body{
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+.boxes{
+	background-color: white;
+	border: 30px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
+
+}
+
+.notification{
+	background-color: white;
+	border-radius: 30px;
+	border-color: #008a77;
+	
 }
