--- a/css/style.css
+++ b/css/style.css
@@ -240,18 +240,14 @@ footer{
 	text-align: center;
 }
 
-.new_card{
-	background-image: url("../img/news-board.png");
+.new_title{
+	background-image: url("../img/new-default.png");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-position: 0 0;
-	width: 99%;
-	margin: 0 auto;
-}
-
-.new_title{
+	width: 100%;
+	height: 300px;
 	text-align: center;
-	padding-top: 32%;
 	color: white;
 }
 
@@ -315,4 +311,26 @@ footer{
 
 #RC .slider-selection {
 	background: #FF8282;
+}
+
+.slider-track .slider-selection {
+	background: #FF8282;
+}
+
+#inputGroup-sizing-sm{
+	background-color: rgb(247,107,28);
+	width: 236px;
+	color: white;
+}
+
+#inputGroupSelect01{
+	background-color: rgb(247,107,28);
+	width: 236px;
+	color: white;
+}
+
+#add{
+	background-color: rgb(247,107,28);
+	width: 236px;
+	color: white;
 }
